@@ -3,6 +3,8 @@
 enabled = 1
 ; set to 0: disable motion cotroller / vive tracker override
 physical_enabled = 1
+; set to 0: disable initialization of graphical overlay
+overlay_enabled = 1
 
 [tracker]
 ; supported modes: controller, yaw, srs and flypt 
